traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:2: error: ')' expected but ';' found.
  do (baisseBrosse();
                    ^Snake:3: error: 'while' expected but identifier found.
     avance();)
     ^Snake:3: error: '(' expected but ';' found.
     avance();)
             ^Snake:3: error: illegal start of statement
     avance();)
              ^